--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
-  "name": "netlify-helper",
-  "version": "1.0.2",
-  "description": "This package uses the Netlify api to manage/edit sites hosted by Netlify.",
-  "main": "index.js",
+  "name": "netlify-locked-publish",
+  "version": "1.0.0",
+  "description": "This package uses the Netlify api to publish the most recent locked deploy.",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "test"
+    "build": "tsc",
+    "test": "test",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "author": "blakeduncan14",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/Footage-Firm/netlify-helper"
+    "type": "git",
+    "url": "https://github.com/Footage-Firm/netlify-locked-publish"
   },
-  "license": "ISC",
+  "license": "MIT",
+  "homepage": "https://github.com/Footage-Firm/netlify-locked-publish#README",
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "yargs": "^12.0.5"
   },
   "devDependencies": {
-    "eslint": "^5.12.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
-  }
+    "prettier": "^1.15.3",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.17.0",
+    "typescript": "^3.2.4"
+  },
+  "files": [
+    "lib/**/**"
+  ]
 }
