--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netlify-locked-publish",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "This package uses the Netlify api to publish the most recent locked deploy.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -34,5 +34,6 @@
   },
   "files": [
     "lib/**/**"
-  ]
+  ],
+  "bin": "lib/index.js"
 }
